# Fly_in

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/algorithm/: pathfinder.py
src/graph/: connection.py  graph.py  zone.py
src/parser/: parser.py
src/simulation/: drone.py  simulation.py
src/visualization/: gui.py  visualizer.py
tests/: conftest.py  test_benchmarks.py  test_documentation.py  test_parser.py  test_pathfinder.py  test_simulation.py  test_visualizer.py
