[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fly-in"
version = "0.1.0"
description = "Drone routing simulation project."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
    "mypy>=1.8",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
exclude = [
    "^\\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
    "^.*\\.egg-info/",
]
